--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
 
     <article>
-      <header>
+      <header class="second-header">
         <h2>The Basic Language of the Web: HTML</h2>
 
         <img
