positioned the like button

--- a/index.html
+++ b/index.html
@@ -146,5 +146,6 @@
         <p id="copyright">Copyright &copy; 2027 by The Code Magazine.</p>
       </footer>
     </div>
+    <button>💗Like</button>
   </body>
 </html>
